--- a/style.css
+++ b/style.css
@@ -9,3 +9,19 @@
   height: 50px;
   background-color: black;
 }
+
+#enemy {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: red;
+  position: absolute;
+  top: 500px;
+  right: 0;
+  animation: enemyAnimation 3s infinite linear;
+}
+
+@keyframes enemyAnimation {
+  0%{right:0;}
+  100%{right:700px;}
+}
