--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   background-color: black;
 }
 
-#enemy {
+.enemy {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -21,7 +21,7 @@
   animation: enemyAnimation 3s infinite linear;
 }
 
-@keyframes enemyAnimation {
+/*@keyframes enemyAnimation {
   0%{right:0;}
-  100%{right:700px;}
-}
+  100%{right:100%;}
+}*/
