--- a/style.css
+++ b/style.css
@@ -1,27 +1,37 @@
 #wrapper {
-  width: 100vw;
-  height: 100vh;
+  width: 1000px;
+  height: 500px;
   background-color: aquamarine;
+  margin: auto;
+  position: relative;
 }
 
 #hero {
   width: 50px;
   height: 50px;
   background-color: black;
+  /* position: absolute;
+  top: 0;
+  left: 0; */
 }
 
-.enemy {
+#enemy {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: red;
   position: absolute;
-  top: 500px;
-  right: 0;
-  animation: enemyAnimation 3s infinite linear;
-}
+  bottom: 0;
+  right: 0; 
+};
 
-/*@keyframes enemyAnimation {
-  0%{right:0;}
-  100%{right:100%;}
-}*/
+/* .newEnemy  {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: red; */
+  /* position: absolute;
+  bottom: 0;
+  right: 0;  
+};*/
+
