--- a/style.css
+++ b/style.css
@@ -1,26 +1,13 @@
-html {
-  margin:0;
-  padding: 0;
-}
-
-body {
-  background-image: url("background1.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  max-height: 100vh;
-  background-size: cover;
-} 
 #wrapper {
   width: 1000px;
   height: 500px;
   background-color: aquamarine;
-  position: relative;
   margin: auto;
-  top:100px;
+  position: relative;
 }
 
 #hero {
   width: 50px;
   height: 50px;
-  /*background-color: black;*/
+  background-color: black;
 }
